--- a/README.Rmd
+++ b/README.Rmd
@@ -18,6 +18,8 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 [![CRAN status](https://www.r-pkg.org/badges/version/usethistest)](https://CRAN.R-project.org/package=usethistest)
+[![R-CMD-check](https://github.com/avallecam/usethistest/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/avallecam/usethistest/actions/workflows/R-CMD-check.yaml)
+[![Codecov test coverage](https://codecov.io/gh/avallecam/usethistest/branch/master/graph/badge.svg)](https://app.codecov.io/gh/avallecam/usethistest?branch=master)
 <!-- badges: end -->
 
 The goal of usethistest is to ...
